--- a/Day27/BT01.md
+++ b/Day27/BT01.md
@@ -1,7 +1,9 @@
-Chuyển đổi mảng 1 chiều thành dạng lồng (nested)
+## Xử lý tạo mảng phân cấp lồng nhau (Convert Nested Array)
 
-```js
-[
+Viết hàm `convertNested(arr)` để chuyển một mảng 1 chiều bất kỳ thành dạng lồng (nested).
+
+```javascript
+const categories = [
 	{
 		id: 1,
 		name: "Chuyên mục 1",
@@ -62,8 +64,14 @@ Chuyển đổi mảng 1 chiều thành dạng lồng (nested)
 
 Kết quả:
 
-```js
-var categories = [
+```javascript
+const categoriesNess = convertNested(categories);
+
+console.log(categoriesNess);
+
+// Output:
+
+categoriesNested = [
 	{
 		id: 1,
 		name: "Chuyên mục 1",
